# cmake-sample

demo1/: CMakeLists.txt
demo2/: CMakeLists.txt
demo2/src/: main.cpp  my_math.h
demo3/: CMakeLists.txt  demo3.cpp
demo3/mylib/: CMakeLists.txt  my_math.h
demo4/: CMakeLists.txt
demo4/mylib/: CMakeLists.txt  my_math.cpp
demo4/src/: CMakeLists.txt  demo4.cpp
demo5/: CMakeLists.txt
demo5-boost/src/: demo5.cpp
demo5-boost/util/: CMakeLists.txt  mi_util.cpp  mi_util.h
demo5/src/: CMakeLists.txt
demo5/util/: CMakeLists.txt
demo6-qt/: CMakeLists.txt  mainwindow.ui
demo7-cuda/: CMakeLists.txt
demo7-cuda/culib/: CMakeLists.txt  kernel_smooth.cu  smooth.cpp  smooth.h
demo7-cuda/src/: CMakeLists.txt  main.cpp
